style/elegance.css
/* ... */
.user-grade thead {
    font-size: 1.2em;
}

table#user-grades .userpicture {
    border-radius: 20px;
    margin: 3px;
    margin-right: 10px;
    border: 1px solid #AAA;
}

table#user-grades td.fixedcolumn.cell.topleft.cell.c0 {
    background: transparent !important;
    border: 0px none !important;
}

table#user-grades th.header.useremail {
    text-align: left;
    padding-left: 10px;
}

table#user-grades th.userreport.c1 {
    border: 1px solid #ddd;
    padding-left: 10px;
    padding-right: 10px;
}

#grade_edit_tree_table {
    background: #fff;
}

#grade_edit_tree_table .select,
#grade_edit_tree_table input{
    font-size: .9em;
}

#grade_edit_tree_table input {
    width: 40px;
    padding: 1px 5px;
}

#grade_edit_tree_table .level1,
#grade_edit_tree_table .level2,
#grade_edit_tree_table .level3,
#grade_edit_tree_table .level4,
#grade_edit_tree_table .level5 {
    width: 5px;
}


.path-grade-report-grader .left_scroller #fixed_column th {
    height: 5em;
}

.path-grade-report-grader .right_scroller table#user-grades td.grade{
    height: 5em;
}

/* @end */

/* @group Forums */

#page-mod-forum-view .forumheaderlist tr th {
	padding:10px 5px;
}

#page-mod-forum-view .forumheaderlist tr td {
	padding:10px 5px;
}

#page-mod-forum-view .forumheaderlist .replies {
	text-align:left;
}

#page-mod-forum-view .forumheaderlist .lastpost {
	text-align:left;
}

#page-mod-forum-view .forumheaderlist .lastpost a:last-child {
	font-size:11.9px;
}

#page-mod-forum-view.dir-rtl .forumheaderlist .replies {
	text-align:right;
}

#page-mod-forum-view.dir-rtl .forumheaderlist .lastpost {
	text-align:right;
}

#page-mod-forum-discuss .discussioncontrols {
	margin:0;
}

#page-mod-forum-discuss .discussioncontrols .discussioncontrol {
	float:right;
	width:auto;
}

#page-mod-forum-discuss .indent {
	margin-left:40px;
}

#page-mod-forum-discuss .indent .forumthread {
	display:block;
	margin-top:20px;
}

.forumpost {
	background: #fafafa;
}

.forumpost .header {
	border-bottom: 1px solid rgb(223, 223, 223);
}

.forumpost .header::after {
	background-color: #1fbaeb;
	content: "";
	display: block;
	height: 1px;
	width: 80px;
	position: relative;
}

#page-mod-forum-discuss .forumpost{
	position:relative;
	padding:10px;
}

#page-mod-forum-discuss .forumpost .row{
	position:static;
}

#page-mod-forum-discuss .forumpost .row .left{
	width:80px;
	padding:0;
}

#page-mod-forum-discuss .forumpost .row .left.picture img{
	width:60px;
	height:60px;
	padding:1px;
	vertical-align:middle;
	border:5px solid #fff;
	border-radius: 270px;
	box-shadow: 0 1px 1px rgba(0,0,0,0.05);
}

#page-mod-forum-discuss .forumpost .row .left .grouppictures{
	position:absolute;
	top:25px;
	right:24px;
	margin-top: 15px;
}

#page-mod-forum-discuss .forumpost .row .left .grouppictures a{
	display:inline-block;
	padding:5px 6px;
	margin:0 2px 5px;
	background-color:#fff;
	border-radius:50px;
	box-shadow:0 2px 1px rgba(0,0,0,0.05);
}

.forumpost .row .left .grouppicture {
	width: 25px;
	height: 25px;
	border-radius: 270px;
}

#page-mod-forum-discuss .forumpost .row.side .left{
	display:none;
}

#page-mod-forum-discuss .forumpost .row .topic{
	padding-bottom:55px;
	padding-bottom:35px;
	overflow:auto;
}

#page-mod-forum-discuss .forumpost .row .topic .subject{
	display:none;
}

#page-mod-forum-discuss .forumpost .row .topic .author{
	padding-top:0px;
	font-size:11.9px;
	color:#868686;
}

#page-mod-forum-discuss .forumpost .row .topic .author a{
	margin-bottom:-2px;
	font-size:14px;
	font-weight:bold;
}


#page-mod-forum-discuss .forumpost .row .content{
	padding:10px;
}

#page-mod-forum-discuss .forumpost .row .forum-post-rating{
	display:inline-block;
}

#page-mod-forum-discuss .forumpost .row .forum-post-rating .iconhelp{
	vertical-align:baseline;
}

#page-mod-forum-discuss .forumpost .row .options{
	padding:10px;
	margin-right:0;
	margin-left:0;
}

#page-mod-forum-discuss .forumpost .row .options .commands{
	display:inline-block;
	float:right;
	color: #fafafa;
}

#page-mod-forum-discuss .forumpost .row .options .commands a {
	font-size:11.9px;
	border: 1px solid #b4b4b7;
	background: #ecedf0;
	color: #333537;
	padding: 9px 12px 9px;
	line-height: 22px;
	text-decoration: none;
	border-radius: 3px;
	-webkit-transition: 0.25s;
	-moz-transition: 0.25s;
	-o-transition: 0.25s;
	transition: 0.25s;
}

#page-mod-forum-discuss .forumpost .row .options .commands a:hover {
	background: #1990d5;
	color: #fff;
	font-weight: 600;
}

#page-mod-forum-discuss .forumpost.firstpost .row{
	position:inherit;
}

#page-mod-forum-discuss .forumpost.firstpost .row .topic{
	padding-bottom: 20px;
}

#page-mod-forum-discuss .forumpost.firstpost .row .topic .subject{
	display:block;
	padding-top:3px;
	font-size:24px;
	font-weight:100;
	line-height:30px;
	color:#000;
}

#page-mod-forum-discuss .forumpost.firstpost .row .topic .author{
	margin-top:-2px;
}

#page-mod-forum-discuss .forumpost.firstpost .row .grouppictures{
	top:-69px;
	right:4px;
}

#page-mod-forum-discuss .forumpost.unread .row{
	border-bottom:0;
	border-radius:4px;
}

#page-mod-forum-discuss.dir-rtl .discussioncontrol{
	float:left;
}

#page-mod-forum-discuss.dir-rtl .indent{
	margin-right:80px;
	margin-left:inherit;
}

#page-mod-forum-discuss.dir-rtl .forumpost .row .grouppictures{
	right:inherit;
	left:24px;
}

#page-mod-forum-discuss.dir-rtl .forumpost .row .forum-post-rating{
	float:right;
}

#page-mod-forum-discuss.dir-rtl .forumpost .row .commands{
	float:left;
}

#page-mod-forum-discuss.dir-rtl .forumpost.firstpost .row .grouppictures{
	right:inherit;
	left:4px;
}

/* @end */

/* @group Glossary */

.path-mod-glossary .glossarypost .concept h4 {
	margin-bottom: 0px;
}

.path-mod-glossary .glossarypost .time {
	font-size: .7em;
	font-weight: 300;
}

/* @end */

/* @group Course Listing */
.coursebox .content {
	display: table;
}
/* ... */

